sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,11 @@
-sonar.projectKey=KinzaNaeem1420_SimpleCalculator
-sonar.organization=kinzanaeem1420
+sonar.projectKey=sast-scanner
+sonar.projectName=sast-scanner Security Scan
+sonar.projectVersion=1.0
+sonar.sourceEncoding=UTF-8
+sonar.sources=.
+sonar.exclusions=**/node_modules/**,**/tests/**,**/dist/**,**/coverage/**
+sonar.language=js
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.login=YOUR_SONARQUBE_TOKEN
+sonar.host.url=http://localhost:9000
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=SimpleCalculator
-#sonar.projectVersion=1.0
-
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
